--- a/Main.html
+++ b/Main.html
@@ -31,21 +31,21 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="3D27C175-0777-41B5-94DF-E163D5700DFF.jpg" class="d-block w-100" alt="..." width="650" height="650">
+                    <img src="" class="d-block w-100" alt="Image" width="650" height="650">
                     <div id="cat-1-info" class="carousel-caption d-none d-md-block">
                         <h5>Location 1</h5>
                         <p>Caption</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="9001142A-8577-492E-89EA-E0DC46061CDB.jpg" class="d-block w-100" alt="..." width="650" height="650">
+                    <img src="" class="d-block w-100" alt="Image" width="650" height="650">
                     <div id="cat-2-info" class="carousel-caption d-none d-md-block">
                         <h5>Location 2</h5>
                         <p>Caption</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="IMG_5634.JPG" class="d-block w-100" alt="..." width="650" height="650">
+                    <img src="" class="d-block w-100" alt="Image" width="650" height="650">
                     <div id="cat-3-info" class="carousel-caption d-none d-md-block">
                         <h5>Location 3</h5>
                         <p>Caption</p>
