--- a/Main.html
+++ b/Main.html
@@ -32,21 +32,21 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="" class="d-block w-100" alt="Image" width="650" height="650">
-                    <div id="cat-1-info" class="carousel-caption d-none d-md-block">
+                    <div id="image1-1-info" class="carousel-caption d-none d-md-block">
                         <h5>Location 1</h5>
                         <p>Caption</p>
                       </div>
                   </div>
                   <div class="carousel-item">
                     <img src="" class="d-block w-100" alt="Image" width="650" height="650">
-                    <div id="cat-2-info" class="carousel-caption d-none d-md-block">
+                    <div id="image2-2-info" class="carousel-caption d-none d-md-block">
                         <h5>Location 2</h5>
                         <p>Caption</p>
                       </div>
                   </div>
                   <div class="carousel-item">
                     <img src="" class="d-block w-100" alt="Image" width="650" height="650">
-                    <div id="cat-3-info" class="carousel-caption d-none d-md-block">
+                    <div id="image3-3-info" class="carousel-caption d-none d-md-block">
                         <h5>Location 3</h5>
                         <p>Caption</p>
                       </div>
