Added colour and a second page

--- a/Main.html
+++ b/Main.html
@@ -13,13 +13,13 @@
         <header>    
             <nav>
                 <div class="travel-guide">
-                    <a href="#" id="logo"> <img src="googlelogo.png" alt="logo"></a>
+                    <a href="#" id="logo"> <img src="" alt="Company Logo"></a>
                 </div>
                 <ul class="nav-links" id="nav_bar">
-                    <li id="Home"><a href="#">Home</a></li>
+                    <li id="Home"><a href="Main.html">Home</a></li>
                     <li id="About"><a href="#">About</a></li>
                     <li id="Contact"><a href="#">Contact</a></li>
-                    <li id="Places"><a href="#">Places</a></li>
+                    <li id="Places"><a href="Places.html">Places</a></li>
                 </ul>
             </nav>
 
@@ -70,7 +70,8 @@
         </header>
 
 
-    <body>   
+    <body> 
+        <h3>Holiday Categories</h3>  
         <div class="buttons">
             <input type="button" value="City Break" id="place_1" >
             <input type="button" value="Beach Break" id="place_2">
@@ -93,6 +94,7 @@
         </div>
 
         <h3>More destinations coming soon...</h3>
+        
         <ul id="socials">
             <li id="twitter"><a href="#"><img src="twitter logo.png" alt="twitter logo" width="80px" height="80px"></a></li>
             <li id="instagram"><a href="#"><img src="instagram logo.jpg" alt="instagram logo" width="80px" height="80px"></a></li>
