--- a/Main.html
+++ b/Main.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="Main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
     </head>
-
+    <body>
         <header>    
             <nav>
                 <div class="travel-guide">
@@ -69,18 +69,17 @@
               <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         </header>
 
+            <h3>Holiday Categories</h3>  
 
-    <body> 
-        <h3>Holiday Categories</h3>  
         <div class="buttons">
-            <input type="button" value="City Break" id="place_1" >
-            <input type="button" value="Beach Break" id="place_2">
-            <input type="button" value="Family Friendly" id="place_3">
+            <input type="button" value="Place 1" id="place_1" >
+            <input type="button" value="Place 2" id="place_2">
+            <input type="button" value="Place 3" id="place_3">
         </div>
        <div class="buttons">
-            <input type="button" value="Tourist Attractions" id="place_4">
-            <input type="button" value="Group Holidays" id="place_5">
-            <input type="button" value="Skiing" id="place_6">
+            <input type="button" value="Place 4" id="place_4">
+            <input type="button" value="Place 5" id="place_5">
+            <input type="button" value="Place 6" id="place_6">
         </div>
         
     </body>
