--- a/Main.html
+++ b/Main.html
@@ -16,8 +16,8 @@
                     <a href="#" id="logo"> <img src="googlelogo.png" alt="logo"></a>
                 </div>
                 <ul class="nav-links" id="nav_bar">
-                    <li id="Home"><a href="#">Home</a></li>
-                    <li id="About"><a href="#">About</a></li>
+                    <li id="Home"><a href="./main.html">Home</a></li>
+                    <li id="About"><a href="./about.html">About</a></li>
                     <li id="Contact"><a href="#">Contact</a></li>
                     <li id="Places"><a href="#">Places</a></li>
                 </ul>
