--- a/Main.html
+++ b/Main.html
@@ -18,7 +18,7 @@
                 <ul class="nav-links" id="nav_bar">
                     <li id="Home"><a href="./main.html">Home</a></li>
                     <li id="About"><a href="./about.html">About</a></li>
-                    <li id="Contact"><a href="#">Contact</a></li>
+                    <li id="Contact"><a href="./contact.html">Contact</a></li>
                     <li id="Places"><a href="#">Places</a></li>
                 </ul>
             </nav>
