--- a/Main.html
+++ b/Main.html
@@ -67,13 +67,11 @@
               <!-- JavaScript Bundle with Popper -->
               <!-- this allows us to use the carousel -->
               <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        </header>
-
-            <h3>Holiday Categories</h3>  
+        </header> 
 
         <div class="buttons">
-            <input type="button" value="Place 1" id="place_1" >
-            <input type="button" value="Place 2" id="place_2">
+            <input type="button" value="France" id="place_1" >
+            <input type="button" value="Italy" id="place_2">
             <input type="button" value="Place 3" id="place_3">
         </div>
                
