--- a/Cyprus.html
+++ b/Cyprus.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Italy</title>
+        <title>Cyprus</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="#">
@@ -17,23 +17,59 @@
                     <a href="#" id="logo"> <img src="" alt="Company Logo"></a>
                 </div>
                 <ul class="nav-links" id="nav_bar">
-                    <li id="Home"><a href="./Main.html">Home</a></li>
+                    <li id="Home"><a href="./main.html">Home</a></li>
                     <li id="About"><a href="#">About</a></li>
                     <li id="Contact"><a href="#">Contact</a></li>
-                    <li id="Places"><a href="./Places.html">Places</a></li>
+                    <li id="Places"><a href="#">Places</a></li>
                 </ul>
             </nav>
 
-            <h1>Italy</h1>
+            <h1>My experience in Cyprus</h1>
+
+            <p>I recently went to Ayia Napa, Cyprus with a group of girlfriends. It was a short but very fun trip. <br/h>
+            If you're looking for short haul then Cyprus is the place for you.</p>
+
+            <h3>Where to stay</h3>
+            <p>When I went my and my friend stayed at the Sunprime Hotel, this hotel was really good and modern.<br/h>
+            They have a lot of options for breakfast, including a full english
+            Each block had it's own pool, and each room was a studio so if you like cooking then I would highly recommend!<br/h>
+            <img src="#" alt="Images of sunprime">
+            
+            When exploring Ayia Napa we noticed that a lot of the accomodations where within walking distance and were very similar structure.<br/h>
+            So here is a list of other accomodations you may consider:</p>
+
+            <ul>
+                <li></li>
+            </ul>
+
+            <h3>Things to do</h3>
+            <ul>
+                <li>Go on a tour</li>
+                <li>Visit Nissi Beach</li>
+                <li>Go to the water park</li>
+                <li>Rent quad bikes</li>
+            </ul>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Things to look forward to</th>
+                        <th>Things to look out for</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Great weather</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
 
         </header>
-
-        <h3>Major Cities</h3>
-        <div class="buttons">
-            <input type="button" value="Venice" id="venice" >
-            <input type="button" value="Milan" id="milan">
-            <input type="button" value="Rome" id="rome">
-        </div>
+ 
+        <h3></h3>
+        
 
     </body>
 </html>
