--- a/Italy.html
+++ b/Italy.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CFG Travels</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Main.css">
     <title>CFG Travels</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
-
-  <header>
+   
+  <body>
+   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">CFG Travels</a>
@@ -38,14 +38,15 @@
           </div>
         </div>
       </nav>
- </header>
+  <h1>Italy</h1>
+  </header>
 
- <main>
-            
-            <div class="image-container">
-              <img src="#" alt="Sara"  height = "325xp" width = "270xp">
-              <img src="./emma.JPG" alt="Emma"  height = "325xp" width = "270xp">
-            </div>
-         </main>
+        <h3>Major Cities</h3>
+        <div class="buttons">
+            <input type="button" value="Venice" id="venice" >
+            <input type="button" value="Milan" id="milan">
+            <input type="button" value="Rome" id="rome">
+        </div>
 
-   </body>
+    </body>
+</html>
