--- a/Main.html
+++ b/Main.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>CFG Travels</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
+        <link rel="stylesheet" href="Main.css">
     </head>
 
         <header>    
@@ -30,7 +30,7 @@
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">France</a></li>
-                          <li><a class="dropdown-item" href="#">Itay</a></li>
+                          <li><a class="dropdown-item" href="#">Cyprus</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -49,21 +49,18 @@
                     <img src="italy.jpg" class="d-block w-100" alt="Image1" width="650" height="650">
                     <div id="image1-1-info" class="carousel-caption d-none d-md-block">
                         <h5>Venice, Italy</h5>
-                        <p>Caption</p>
                       </div>
                   </div>
                   <div class="carousel-item">
                     <img src="iceland.jpg" class="d-block w-100" alt="Image2" width="650" height="650">
                     <div id="image2-2-info" class="carousel-caption d-none d-md-block">
                         <h5>Reykjavik, Iceland</h5>
-                        <p>Caption</p>
                       </div>
                   </div>
                   <div class="carousel-item">
                     <img src="greece.jpg" class="d-block w-100" alt="Image3" width="650" height="650">
                     <div id="image3-3-info" class="carousel-caption d-none d-md-block">
                         <h5>Santorini, Greece</h5>
-                        <p>Caption</p>
                       </div>
                   </div>
                 </div>
@@ -85,20 +82,10 @@
               </header>
 
     <body>   
-        <div class="buttons">
-            <input type="button" value="City Break" id="place_1" >
-            <input type="button" value="Beach Break" id="place_2">
-            <input type="button" value="Family Friendly" id="place_3">
+        <div class="button-container">
+            <button class="buttons" id="France">France <img src="" width="300px" height="300px"></button>
+            <button class="buttons" id="Cyprus">Cyprus<img src=""></button>
         </div>
-       <div class="buttons">
-            <input type="button" value="Tourist Attractions" id="place_4">
-            <input type="button" value="Group Holidays" id="place_5">
-            <input type="button" value="Skiing" id="place_6">
-            <input type="button" value="France" id="place_1" >
-            <input type="button" value="Italy" id="place_2">
-            <input type="button" value="Place 3" id="place_3">
-        </div>
-        
     </body>
 
     <footer>
