--- a/Cyprus.html
+++ b/Cyprus.html
@@ -24,7 +24,10 @@
                 </ul>
             </nav>
 
-            <h1>My experience in Cyprus</h1>
+            
+
+        </header>
+        <h1>My experience in Cyprus</h1>
 
             <p>I recently went to Ayia Napa, Cyprus with a group of girlfriends. It was a short but very fun trip. <br/h>
             If you're looking for short haul then Cyprus is the place for you.</p>
@@ -38,38 +41,49 @@
             When exploring Ayia Napa we noticed that a lot of the accomodations where within walking distance and were very similar structure.<br/h>
             So here is a list of other accomodations you may consider:</p>
 
-            <ul>
-                <li></li>
-            </ul>
-
-            <h3>Things to do</h3>
-            <ul>
-                <li>Go on a tour</li>
-                <li>Visit Nissi Beach</li>
-                <li>Go to the water park</li>
-                <li>Rent quad bikes</li>
-            </ul>
-
-            <table>
+             <table>
                 <thead>
-                    <tr>
-                        <th>Things to look forward to</th>
-                        <th>Things to look out for</th>
+                    <tr id="categories">
+                        <th>Villas</th>
+                        <th>Hotels</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <td>Great weather</td>
-                        <td></td>
+                        <td>Zoi</td>
+                        <td>Anthea Hotel Apartment</td>
+                    </tr>
+                    <tr>
+                        <td>Sweet Destiny Villa</td>
+                        <td>Hotel Napa Suites</td>
+                    </tr>
+                    <tr>
+                        <td>Ionion Beachfron Villa</td>
+                        <td>Rio Garderns</td>
                     </tr>
                 </tbody>
-            </table>
+             </table>
+            <h3>Things to do</h3>
+            <ul>
+                <li>Go on a jeep tour</li>
+                <li>Visit Nissi Beach</li>
+                <li>Go to the water park</li>
+                <li>Rent quad bikes</li>
+                <li>Go scuba diving</li>
+            </ul>
 
-        </header>
- 
-        <h3></h3>
-        
+            <h3>Things to look out for</h3>
+            <ul>
+                <li>Lots of cats</li>
+                <li>If you do clubbing people are allowed to smoke indoors (not ideal for people with ashtma like me)</li>
+                <li>If you go on a tour make sure you wear trainers, because I didn't and there was a lot of walking</li>
+                <li>Bring a hat to avoid the sun in your eyes</li>
+                <li>If you go to Ayia Napa during off peak season a lot of things will be closed</li>
+                <li>Reastaurants tend to open at 4pm</li>
+                <li>Bring a sweater/jumper as it gets a bit chilly in the evenings</li>
+                <li>BRING CASH!!!</li>
+            </ul>        
 
     </body>
 </html>
