--- a/Cyprus.html
+++ b/Cyprus.html
@@ -3,26 +3,41 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Cyprus</title>
-        <meta name="description" content="">
+        <title>CFG Travels</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="#">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
+        <link rel="stylesheet" href="Main.css">
     </head>
 
     <body>
         <header>
-            <nav>
-                <div class="travel-guide">
-                    <a href="#" id="logo"> <img src="" alt="Company Logo"></a>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">CFG Travels</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link home" aria-current="page" href="./Main.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Places
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">France</a></li>
+                          <li><a class="dropdown-item" href="./Cyprus.html">Cyprus</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <ul class="nav-links" id="nav_bar">
-                    <li id="Home"><a href="./main.html">Home</a></li>
-                    <li id="About"><a href="#">About</a></li>
-                    <li id="Contact"><a href="#">Contact</a></li>
-                    <li id="Places"><a href="#">Places</a></li>
-                </ul>
-            </nav>
+              </nav>
 
             
 
@@ -86,4 +101,19 @@
             </ul>        
 
     </body>
+    <footer>
+        <div class="form">
+            <form>
+                <label for="form-search"></label>
+                <input type="text" id="form-search" placeholder="Search for a destination">
+            </form>
+        </div>
+
+        <h3>More destinations coming soon...</h3>
+        <ul id="socials">
+            <li id="twitter"><a href="#"><img src="twitter logo.png" alt="twitter logo" width="80px" height="80px"></a></li>
+            <li id="instagram"><a href="#"><img src="instagram logo.jpg" alt="instagram logo" width="80px" height="80px"></a></li>
+            <li id="tiktok"><a href="#"><img src="tiktok logo.png" alt="tiktok logo" width="80px" height="80px"></a></li>
+        </ul>
+    </footer>
 </html>
