--- a/Main.html
+++ b/Main.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
         <link rel="stylesheet" href="Main.css">
     </head>
-
+    <body>
         <header>    
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
@@ -30,7 +30,7 @@
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">France</a></li>
-                          <li><a class="dropdown-item" href="#">Cyprus</a></li>
+                          <li><a class="dropdown-item" href="./Cyprus.html">Cyprus</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -81,10 +81,9 @@
               <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
               </header>
 
-    <body>   
         <div class="button-container">
-            <button class="buttons" id="France">France <img src="" width="300px" height="300px"></button>
-            <button class="buttons" id="Cyprus">Cyprus<img src=""></button>
+            <button class="buttons" id="France">France</button>
+            <button class="buttons" id="Cyprus">Cyprus <a href="./Cyprus.html"></a></button>
         </div>
     </body>
 
