--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     <title>CFG Travels</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
-
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">CFG Travels</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,21 +31,36 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">France</a></li>
-                  <li><a class="dropdown-item" href="#">Itay</a></li>
+                  <li><a class="dropdown-item" href="./Cyprus.html">Cyprus</a></li>
                 </ul>
               </li>
             </ul>
           </div>
         </div>
       </nav>
- </header>
+    </header>
 
- <main>
-            
-            <div class="image-container">
-              <img src="#" alt="Sara"  height = "325xp" width = "270xp">
-              <img src="./emma.JPG" alt="Emma"  height = "325xp" width = "270xp">
-            </div>
-         </main>
+    <main> 
+      <div class="image-container">
+        <img src="#" alt="Sara"  height = "325xp" width = "270xp">
+        <img src="./emma.JPG" alt="Emma"  height = "325xp" width = "270xp">
+      </div>
+    </main>
+  </body>
 
-   </body>
+  <footer>
+    <div class="form">
+      <form>
+        <label for="form-search"></label>
+        <input type="text" id="form-search" placeholder="Search for a destination">
+      </form>
+    </div>
+
+      <h3>More destinations coming soon...</h3>
+    <ul id="socials">
+      <li id="twitter"><a href="#"><img src="twitter logo.png" alt="twitter logo" width="80px" height="80px"></a></li>
+      <li id="instagram"><a href="#"><img src="instagram logo.jpg" alt="instagram logo" width="80px" height="80px"></a></li>
+      <li id="tiktok"><a href="#"><img src="tiktok logo.png" alt="tiktok logo" width="80px" height="80px"></a></li>
+    </ul>
+  </footer>
+</html>
