added images to buttons

--- a/Main.html
+++ b/Main.html
@@ -83,7 +83,7 @@
 
         <div class="button-container">
             <button class="buttons" id="France">France</button>
-            <button class="buttons" id="Cyprus">Cyprus <a href="./Cyprus.html"></a></button>
+            <a href="./Cyprus.html"><button class="buttons" id="Cyprus">Cyprus</a></button>
         </div>
     </body>
 
@@ -97,9 +97,9 @@
 
         <h3>More destinations coming soon...</h3>
         <ul id="socials">
-            <li id="twitter"><a href="#"><img src="twitter logo.png" alt="twitter logo" width="80px" height="80px"></a></li>
-            <li id="instagram"><a href="#"><img src="instagram logo.jpg" alt="instagram logo" width="80px" height="80px"></a></li>
-            <li id="tiktok"><a href="#"><img src="tiktok logo.png" alt="tiktok logo" width="80px" height="80px"></a></li>
+            <li id="twitter"><a href="#"><img src="./Twitter.png" alt="twitter logo" width="80px" height="80px"></a></li>
+            <li id="instagram"><a href="#"><img src="./instagram logo.jpg" alt="instagram logo" width="80px" height="80px"></a></li>
+            <li id="tiktok"><a href="#"><img src="./tiktok logo.png" alt="tiktok logo" width="80px" height="80px"></a></li>
         </ul>
     </footer>
 </html>
