--- a/Cyprus.html
+++ b/Cyprus.html
@@ -43,7 +43,7 @@
         <h1>My experience in Cyprus</h1>
 
             <p>I recently went to Ayia Napa, Cyprus with a group of girlfriends. It was a short but very fun trip. <br/h>
-            If you're looking for short haul then Cyprus is the place for you.</p>
+            If you're looking for short haul then Cyprus is the place for you. I went during March so the weather was like peaing at 25 C</p>
             <div id="carouselCyprusIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselCyprusIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
