--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
     <main> 
       <div class="image-container">
-        <img src="#" alt="Sara"  height = "325xp" width = "270xp">
+        <img src="./9001142A-8577-492E-89EA-E0DC46061CDB.jpg" alt="Sara"  height = "325xp" width = "270xp">
         <img src="./emma.JPG" alt="Emma"  height = "325xp" width = "270xp">
       </div>
     </main>
