--- a/about.html
+++ b/about.html
@@ -45,6 +45,15 @@
         <img src="#" alt="Sara"  height = "325xp" width = "270xp">
         <img src="./emma.JPG" alt="Emma"  height = "325xp" width = "270xp">
       </div>
+
+            <div class="bio">
+                <p>You can learn more about us through this guide but here is a little intoduction. <br>
+                 Emma: "I grew up and stil currently live in Glasglow, Scotland and attended the University of Strathclyde <br>
+                in Psychology. My passion for travelling began when I lived abroad for a year in France and continued from there."<br></p>
+
+                <p>Sara: "I was born in Italy, originally from Nigeria and I'm currently studying Chemical Engineering at the university of Hull <br> and I'm on a placement year. I've always loved travelling and I would love to go to more places.<br> My next holiday destination is Malta!"</p>
+            </div>
+
     </main>
   </body>
 
